# wb-agrifood-backend

./: .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  README.md  cdk.json  main.py  models.py  pyproject.toml
.github/workflows/: ci.yml
data/: knowledge_file.json  records.json  wb_ag_apps.json  wb_ag_datasets.json  wb_ag_microdatasets.json  wb_ag_projects.csv  wb_ag_projects.json  wb_ag_projects_datasets.json  wb_datasets.json  wb_projects.json  wb_youtube_videos.json
notebooks/: data_processing.ipynb  demo.ipynb
src/: app.py
src/lambda/: Dockerfile  main.py  models.py  requirements.txt  thread_runner.py
src/lambda/.lancedb/agrifood.lance/_transactions/: 0-5bff0eef-52e5-4851-8a65-fdbcbdb92fb6.txn  0-f6b972c5-8e77-4a2b-b71e-070c75104ffe.txn  1-181084b8-6b4f-461f-9fec-ebb62a79d7f7.txn  1-77dc46da-e895-4c85-a851-a2de31bf1f22.txn
src/utils/: __init__.py  config.py  embeddings.py  embeddings_v1.0.py  load_vector_database.py  openai_assistant.py  requirements.txt  update_openai_assistant.py  vector_database.py
utils/: embeddings.py  openai_assistant.py  vector_database.py
