[tool.poetry]
name = "agrifood-api"
version = "0.1.0"
description = "World Bank Agrifood project's API"
authors = ["Development Seed <info@ds.io>"]
readme = "README.md"

# TODO: remove runtime dependencies from here and add to 
# requirements file used in docker build
[tool.poetry.dependencies]
python = "^3.11"
#fastapi = "^0.109.0"
#uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
#openai = "^1.10.0"
#load-dotenv = "^0.1.0"
aws-cdk-lib = "^2.125.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
