[tool.poetry]
name = "agrifood-api"
version = "0.1.0"
description = "World Bank Agrifood project's API"
authors = ["Development Seed <info@ds.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.125.0"
pydantic-settings = "^2.1.0"
pre-commit = "^3.6.0"
notebook = "7.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
